# Required initializer
AC_INIT

# Automake initialization
AM_INIT_AUTOMAKE(unistore, 1.0)

# Add a test for a compiler.
AC_PROG_CC
AM_PROG_LIBTOOL


AC_DEFUN([LIBEVENT_DIR],[

    AC_ARG_WITH(
        cwinux,
        [  --with-cwinux[=DIR]        cwinux directory],
        ,
        [with_cwinux="no"]
    )
    AC_MSG_CHECKING(for libevent directory)

    AC_ARG_WITH(
        expat,
        [  --with-expat[=DIR]        xml expat lib directory],
        ,
        [with_expat="no"]
    )
    if test "$with_cwinux" = "no"; then
        AC_MSG_ERROR( You need to specify the cwinux directory using --with-cwinux)
    else
        # make sure that a well known include file exists
        if test -e $with_cwinux/include/app/CwxAppFramework.h; then
            cwinux_dir=$with_cwinux
            AC_MSG_RESULT(cwinux found!)
        else
            AC_MSG_ERROR( $with_cwinux not found.  Check the value you specified with --with-cwinux)
        fi
    fi

    if test "$with_expat" = "no"; then
        AC_MSG_ERROR( You need to specify the xml-expat directory using --with-expat)
    else
        # make sure that a well known include file exists
        if test -e $with_expat/include/expat.h; then
            expat_dir=$with_expat
            AC_MSG_RESULT(xml expat found!)
        else
            AC_MSG_ERROR( $with_expat not found.  Check the value you specified with --with-expat)
        fi
    fi
])

LIBEVENT_DIR

AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_FILE_OFFSET_BITS,64)
AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_REENTRANT)
AC_DEFINE(_GNU_SOURC)


# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(cwinux_dir)
AC_SUBST(expat_dir)


# Write config.status and the Makefile
AC_OUTPUT(Makefile)
