# Required initializer
AC_INIT

# Automake initialization
AM_INIT_AUTOMAKE(cwinux, 1.0)

# Add a test for a compiler.
AC_PROG_CC
AM_PROG_LIBTOOL


AC_DEFUN([CWINUX_DIR],[

    AC_ARG_WITH(
        cwinux-c,
        [  --with-cwinux-c[=DIR]     cwinux c library directory],
        ,
        [with_cwinux_c="no"]
    )
    AC_MSG_CHECKING(for cwinux c library directory)

    if test "$with_cwinux_c" = "no"; then
        AC_MSG_ERROR( You need to specify the cwinux c library directory using --with-cwinux-c)
    else
        # make sure that a well known include file exists
        if test -e $with_cwinux_c/include/cwx_msg_header.h; then
            libcwinux_c_dir=$with_cwinux_c
            AC_MSG_RESULT(cwinux c library found!)
        else
            AC_MSG_ERROR( $with_cwinux_c not found.  Check the value you specified with --with-cwinux-c)
        fi
    fi

])

CWINUX_DIR

AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_FILE_OFFSET_BITS,64)
AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_REENTRANT)
AC_DEFINE(_GNU_SOURC)


# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(libcwinux_c_dir)

# Write config.status and the Makefile
AC_OUTPUT(Makefile)
AC_OUTPUT(lib/Makefile)
